--- a/gb/25/2/25/n14445435.md
+++ b/gb/25/2/25/n14445435.md
@@ -2,30 +2,35 @@
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>王友群：中共取缔法轮功的决策是完全错误的</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2025/02/id14445436-2012050341052384-600x400-1.jpg" />
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2025/02/id14445436-2012050341052384-600x400-1.jpg" />///image2=```diff
+- 2020年12月5日，约5,400名法轮功学员在台北自由广场排出“法轮大法好、真善忍好”图像。（陈柏州／大纪元）
+```
 <h6>2020年12月5日，约5,400名法轮功学员在台北自由广场排出“法轮大法好、真善忍好”图像。（陈柏州／大纪元）
 </h6>
 <hr>
 	<p>【大纪元2025年02月26日讯】江泽民发动的对法轮功的迫害至今已有26年。这场对“真、善、忍”信仰者的迫害，严重败坏了道德，破坏了法纪，祸乱了人心，给全中国人民和全世界人民带来了巨大灾难。早就到了必须终结这场迫害的时候了。</p>
 <p>正本必须清源。终结中共对法轮功的迫害，必须追溯到这场迫害的源头上去。源头上的是非搞清楚了，其它问题都迎刃而解。</p>
+</p>
+<p><center><a title="王友群：中共取缔法轮功的决策是完全错误的【 #听纪元 】| #大纪元新闻" loading="lazy" data2-src=""></a><a href="https://d2tkl2xkgbxyfv.cloudfront.net/E6l4U6Sfe"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/embed/1hf4ehl3le65fXJK8WzNms1NQ1ee1c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>
 <p>现在，无论国内还是国外，都有一个说法，叫“回归常识”。</p>
 <p>1978年中共中纪委恢复重建后的第一任中纪委书记陈云曾讲：“要用百分之九十以上的时间研究情况，用不到百分之十的时间决定政策。所有正确的政策，都是根据对实际情况的科学分析而来的。”</p>
-<p>无论陈云个人怎么样，陈云讲的这句话符合常识。按照常识，中共取缔法轮功的决策是完全错误的。</p>
-<p>法轮功是1992年5月13日由李洪志先生从中国东北的长春市传出的，因其袪病健身、净化心灵有奇效，一经传出，便受到各界人士发自内心的欢迎和喜爱。</p>
-<p>1993年12月，李洪志先生率弟子参加北京东方健康博览会，法轮功获得博览会最高奖——边缘科学进步奖、大会“特别金奖”，以及“受群众欢迎气功师”称号，是荣获奖励最多的气功师。</p>
+<p>无论陈云个人怎么样，陈云讲的这句话符合常识。根据陈云的这个说法，中共取缔法轮功的决策是完全错误的。</p>
+<p>法轮功是1992年5月13日由李洪志先生从中国东北的长春市传出的，因袪病健身、净化心灵有奇效，一经传出，便受到各界人士发自内心的欢迎和喜爱。</p>
+<p>1993年12月，李洪志先生率弟子参加北京东方健康博览会，获得博览会最高奖——边缘科学进步奖、大会“特别金奖”，以及“受群众欢迎气功师”称号，是荣获奖励最多的气功师。</p>
 <p>至1999年4月25日，法轮功不仅传遍中国大陆32个省、自治区、直辖市，而且传到香港、澳门、台湾，传到亚、欧、美、澳四大洲的许多国家和地区。</p>
-<p>当时，对法轮功的迫害不仅是一个重大内政问题，也是一个重大外交问题。</p>
+<p>当时，如何对待法轮功，不仅是一个重大内政问题，也是一个重大外交问题。</p>
 <p>对于如此重大内政外交问题，江泽民花了多少时间做调查研究？有90%以上的时间吗？有5%的时间吗？可能连1%都谈不上。</p>
 <p>1999年中共取缔法轮功的决策，是以江泽民1999年4月25日晚致中共政治局常委的信中提出的“战胜法轮功”结论为依据的。</p>
 <p>而江泽民在得出“战胜法轮功”的结论之前，从来没有对法轮功问题做全面、深入、细致的调查研究。</p>
 <h2><strong>一，江泽民没有到中央和国家机关法轮功学员中做调查。</strong></h2>
 <p>当时，中央和国家机关修炼法轮功的人不少。比如，中纪委、中宣部、公安部、外交部、外经贸部、财政部、中科院等，都有人修炼法轮功。</p>
-<p>中纪委监察部的法轮功学员至少有葛秀兰和我，但江泽民从来没有向葛秀兰和我调查、了解法轮功的真实情况。至今我没有听到、看到1999年4.25之前江泽民到任何一个中央和国家机关召开法轮功学员座谈会，向他们了解法轮功真实情况的报导。</p>
+<p>中纪委监察部的法轮功学员有葛秀兰和我，但江泽民从来没有向葛秀兰和我调查、了解法轮功的真实情况。</p>
+<p>至今我没有听到、看到1999年4.25之前江泽民到任何一个中央和国家机关召开法轮功学员座谈会，向他们了解法轮功真实情况的报导。</p>
 <h2><strong>二，江泽民提出“战胜法轮功”之前国家体育总局没有否定法轮功。</strong></h2>
 <p>1998年5月11日，原来由中共公安部等9部委共管的气功，改为由国家体育总局统一管理。</p>
-<p>1998年10月，国家体育总局派调研组到长春对法轮功进行调研组长邱玉才，是前国家体委群众体育司司长、时任中国气功科学研究会副理事长兼秘书长。组员有管谦、李志超。管谦是前中共总参谋部通信部政委，时任中国气功科学研究会副秘书长。李志超是中国中医研究院教授、高级工程师。</p>
+<p>1998年10月，国家体育总局派调研组到长春对法轮功进行调研。组长邱玉才，是前国家体委群众体育司司长、时任中国气功科学研究会副理事长兼秘书长。组员有管谦、李志超。管谦是前中共军队总参谋部通信部政委，时任中国气功科学研究会副秘书长。李志超是中国中医研究院教授、高级工程师。</p>
 <p>调研组在长春进行了为期一周的调研，除到炼功点明察暗访外，还在10月20日召开了52名法轮功学员参加的座谈会，其中包括老红军、现职军级官员、政府官员、大学教授、企业家、居委会主任、工人等。</p>
-<p>在法轮功学员发言后，邱玉才说：“关于法轮功问题，国家体总委托我和管谦、李志超，到长春对法轮功做一个了解。”</p>
+<p>在认真听取法轮功学员发言后，邱玉才说：“关于法轮功问题，国家体总委托我和管谦、李志超，到长春对法轮功做一个了解。”</p>
 <p>“通过调查了解，长春有十几万人在炼法轮功，而且层次较高，有十几所大专院校的教授、博士生导师、高级干部，还有从工人到知识分子各个层面上的都有，确实功效很显着。这一方面没有疑议。”</p>
 <p>“我们认为法轮功的功法功效都不错，对于社会的稳定，对于精神文明建设，效果是很显着的，这个要充分肯定。”</p>
 <p>“对于在座的各位认真负责地为我们介绍你们修炼法轮功的情况和你们的看法，我表示衷心的感谢；我们要如实地、实事求是地把你们的情况向国家体总和评委会同志们介绍、汇报。”</p>
@@ -35,17 +40,17 @@
 <p>1998年7月21日，中共公安部政治保卫局发出公政【1998】第555号文件《关于对法轮功开展调查的通知》，要求各地公安机关以秘密方式深入调查、搜集法轮功“违法犯罪”的证据。</p>
 <p>但是，直到1999年4月25日，公安部在全国范围内对法轮功进行了长达9个多月的调查，没有发现法轮功“违法犯罪”的证据。</p>
 <p>至1999年4月25日，中国没有一个法轮功学员因“违法犯罪”被依法判刑的案例。</p>
-<p>至1999年4月25日，中国没有一个党政官员因修炼法轮功“违法犯罪”被依法查办的案例。</p>
-<p>至1999年4月25日，中共公安部没有向中央政法委、国务院、中共中央提交否定法轮功的报告。</p>
+<p>至1999年4月25日，中国没有一个党员领导干部因修炼法轮功“违法犯罪”被依法查办的案例。</p>
+<p>至1999年4月25日，公安部没有向中央政法委、国务院、中共中央提交否定法轮功的报告。</p>
 <p>当时的中共政治局常委、中纪委书记尉健行分管政法工作，如果公安部向中央提交了否定法轮功的报告，尉健行肯定会看到。但是，据我所知，尉健行没有收到这样的报告。</p>
 <p>因此，江泽民“战胜法轮功”的结论不是以公安部对法轮功长达9个月的调查结论为依据的。</p>
 <h2><strong>四，江泽民没有到军队法轮功学员中做调查。</strong></h2>
-<p>当时军队法轮功学员也不少。比如，中共解放军总医院院长李其华就是修炼法轮功的。</p>
-<p>李其华1999年4月25日前写过一篇修炼心得体会。这篇心得体会是在没有任何压力的情况下写的，因此，应该是真实的，可信的。</p>
+<p>当时军队法轮功学员也不少。比如，解放军总医院（301医院）院长李其华就是修炼法轮功的。</p>
+<p>李其华1999年4月25日前写过一篇修炼心得体会。这篇心得体会是在没有任何外部压力的情况下写的，因此，应该是真实的，可信的。</p>
 <p>李其华写道：“1993年以前，我对法轮功一无所知，当然也就说不上炼功了。但是，我老伴得法后，很快从一个重病人成为一个健康人的巨大变化，给我的印象太深了，引起了我深刻的思考后，我才对法轮功的学习重视起来。”</p>
 <p>“我所在的解放军总医院，技术、设备虽不敢说都是世界上最先进的，但也是国内外数得着的。就这样也没治好老伴的病，而她学法轮功那么短时间，不用打针、吃药就全好了，这是为什么呢？这些问号不断地在我脑中翻腾。事实胜于雄辩！我从怀疑、观望、关心到想亲自试一试，就这样，我也走进了法轮功的修炼行列。”</p>
 <p>类似李其华这样的中共老干部不少。</p>
-<p>李其华在心得体会中谈到：“我所在的北京老年学法组，人均年龄70多岁，80岁以上者就有好几位，党龄都有几十年了，许多是被称之为‘老革命’、‘老干部’、‘老科学家’、‘老教授’的高级领导和高级知识阶层，这些人也都不是盲目的、不是头脑简单的，而是经过认真思考后，走进修炼法轮功队伍里的。”</p>
+<p>李其华在心得体会中谈到：“我所在的北京老年学法组，人均年龄70多岁，80岁以上者就有好几位，党龄都有几十年了，许多是被称之为‘老革命’‘老干部’‘老科学家’‘老教授’的高级领导和高级知识阶层，这些人也都不是盲目的、不是头脑简单的，而是经过认真思考后，走进修炼法轮功队伍里的。”</p>
 <p>至今我没有听到、看到1999年4.25之前江泽民到军队法轮功学员中做调查的报导。</p>
 <h2><strong>五，江泽民没有对香港、澳门、台湾法轮功修炼者的真实情况做调查。</strong></h2>
 <p>迄今为止，没有任何证据表明江泽民曾经对法轮功在港、澳、台的传播情况做过调查。</p>
@@ -53,70 +58,79 @@
 <p>法轮功从东方传到西方的第一站是法国巴黎。</p>
 <p>1995年3月12日，李洪志先生到法国巴黎讲法传功，首先会见的人，就是时任中共驻法国大使方柏和他的夫人，并当场给方柏夫妇调过病。</p>
 <p>方柏大使本人患肩周炎，胳膊向上抬不到竖直。李洪志先生用手轻轻拍打他的胳膊，一会儿，他的胳膊就能抬到竖直了。大使夫人有腿疾，李洪志先生给她调病时，表面上没动手，但当场就好了，大使夫人很是惊喜。</p>
-<p>当天下午2点，李洪志大师应邀在中共驻法国大使馆文化处礼堂，举办了在西方社会的第一场报告会。中共驻法国大使方柏夫妇、大使馆的几乎所有外交官，还有一些法国民众，出席了报告会。</p>
+<p>当天下午2点，李洪志先生应邀在中共驻法国大使馆文化处礼堂，举办了在西方社会的第一场报告会。中共驻法国大使方柏夫妇、大使馆的几乎所有外交官，还有一些法国民众，出席了报告会。</p>
 <p>1995年3月13日至19日，李洪志先生在巴黎12区多梅尼尔（Daumesnil）大街的一家武术馆内，举办了在法国的第一期法轮功学习班。</p>
 <p>当地不少民众最早就是从中共驻法国大使馆得知法轮功传到巴黎的消息的。</p>
 <p>法轮功是1994年传入美国的。当时有美国人专程飞到广州，参加李洪志先生在广州办的最后一期法轮功学习班。</p>
 <p>据哈佛大学肯尼迪政府学院的梅森学者张尔平介绍，1999年4月25日之前，李洪志先生曾应邀到中共驻纽约总领事馆作报告。领馆内从总领事到最基层的工作人员都曾跟李洪志先生合影留念。</p>
-<p>至今也没有证据表明江泽民对李洪志先生到中共驻法国大使馆文化礼堂讲法、到中共驻纽约总领事馆讲法做过调查，更没有证据表明江泽民对法轮功在欧、美、亚、澳四大洲其他国家的洪传情况做过调查。</p>
+<p>至今也没有证据表明江泽民对李洪志先生到中共驻法国大使馆文化礼堂讲法、到中共驻纽约总领事馆讲法做过调查，更没有证据表明江泽民对法轮功在欧、美、亚、澳四大洲其它国家的洪传情况做过调查。</p>
 <h2><strong>七，江泽民提出“战胜法轮功”之前中纪委监察部没有否定法轮功。</strong></h2>
 <p>我是从1995年5月3日开始修炼法轮功的，到1999年4月25日，修炼近4年。</p>
 <p>我从修炼的第一天起就是公开的，上至时任中共政治局常委、中纪委书记尉健行，中纪委副书记夏赞忠，监察部副部长干以胜，中纪委副秘书长彭吉龙等，下至中纪委法规室官员，许多人都知道。</p>
 <p>在修炼法轮功近4年的时间里，我没有花中纪委监察部1分钱医药费，身体状况良好。我的工作也深得中纪委监察部领导的信任。1999年4月16日，我还参与了尉健行在全国纪检监察法规工作会议上讲话的起草。</p>
-<p style="font-weight: 400;">998年11月22日，在与尉健行共进午餐时，我曾亲手将葛秀兰等135名法轮功学员联名致江泽民的信，11位留学美国、修炼法轮功的博士写的《海外学子的心声》和我自己写给尉健行反映法轮功问题的信，亲手交到尉健行手上。</p>
-<p style="font-weight: 400;">直到1999年720，尉健行对于我给他送信反映法轮功问题，没有批评我一句；对于我修炼法轮功，没有批评我一句。</p>
+<p style="font-weight: 400;">1998年11月22日，在与尉健行共进午餐时，我曾亲手将葛秀兰等135名法轮功学员联名致江泽民的信，11位留学美国、修炼法轮功的博士写的《海外学子的心声》和我自己写给尉健行反映法轮功问题的信，亲手交到尉健行手上。</p>
+<p style="font-weight: 400;">直到1999年7月20日中共取缔法轮功之日，尉健行对于我给他送信反映法轮功问题，没有批评我一句；对于我修炼法轮功，没有批评我一句。</p>
 <p>直到1999年7月20日中共取缔法轮功之日，我所在的党小组、党支部、党总支，没有开过一次会，对我修炼法轮功提出过任何批评。中纪委监察部机关党委、中纪委常委会、中纪委书记副书记、监察部部长副部长，没有一级组织和一位领导反对我修炼法轮功。</p>
 <p>1999年4.25江泽民提出“战胜法轮功”之前，中纪委监察部领导从来没有否定法轮功。</p>
 <h2><strong>八，江泽民没有对中国大陆以外的政府如何对待法轮功做调查。</strong></h2>
 <p>1996年10月12日，李洪志先生在美国得克萨斯州休斯顿市讲法。同一天，休斯顿市政府授予李洪志先生休士顿“荣誉市民”和“亲善大使”称号，授予书公告写道：</p>
 <p>“法轮大法超越于文化和种族的界限，把宇宙真理传扬世界各地，架起了东西方沟通的桥梁，李洪志大师不辞劳苦地将法轮大法从中国传向海外，所到之处使诸多国家众多的人们深受震撼，从而赢得了国际盛誉。”</p>
-<p>至1999年4月25日，法轮功已在中国大陆以外广传。所有有法轮功学员都受到所在国家和地区的政府的认可和欢迎。</p>
+<p>至1999年4月25日，法轮功已在中国大陆以外广传。所有有法轮功学员的国家和地区的政府，没有一个反对法轮功的传播。</p>
 <p>至今没有任何证据表明江泽民对中国大陆以外的政府如何对待法轮功做过调查。</p>
-<h2><strong>九，在没有做任何调查的情况下，江做出“战胜法轮功”的错误结论。</strong></h2>
-<p>江泽民拥有一切便利条件，及时了解并妥善处理法轮功问题，但是，江泽民没有这样做。</p>
-<p>1998年8月初，前中国人民解放军总医院院长李其华等21名法轮功学员，联名致信江泽民等中央领导，反映法轮功问题，没有引起江泽民的重视。</p>
-<p>1998年8月中旬，作为一名中纪委监察部官员，同时也是一名法轮功修炼者，我写了一封反映法轮功问题的信，以挂号信方式，寄给江泽民等七位中共政治局常委，还有国家体育总局局长伍绍祖和中宣部长丁关根，也没有引起江泽民的重视。</p>
-<p>1998年8月底，中纪委监察部副局级官员葛秀兰等135名法轮功学员，联名致信江泽民，还是没有引起江泽民的重视。</p>
+<h2><strong>九，江泽民在对法轮功的基本情况都没有搞清楚的情况下竟然得出必须“战胜法轮功”结论。</strong></h2>
+<div><span lang="EN-US">1999</span>年<span lang="EN-US">4.25</span>之前，作为中共党政军最高领导人，江泽民拥有一切便利条件，及时了解并妥善处理法轮功问题，但是，江泽民没有这样做。</div>
+<p>1998年8月初，前解放军总医院院长李其华等21名法轮功学员，联名致信江泽民等中央领导，反映法轮功问题，没有引起江泽民的重视。</p>
+<p>1998年8月中旬，我写了一封反映法轮功问题的信，以挂号信方式，寄给江泽民等七位中共政治局常委，还有国家体育总局局长伍绍祖和中宣部长丁关根，也没有引起江泽民的重视。</p>
+<p>1998年8月底，中纪委监察部副局级官员葛秀兰等135名法轮功学员，联名致信江泽民，反映法轮功问题，还是没有引起江泽民的重视。</p>
+<p style="font-weight: 400;">对于客观存在的问题<sup>（1）</sup>，法轮功学员反没反映，是法轮功学员的责任；法轮功学员反映了，江泽民管不管，是江泽民的责任。</p>
 <p>正是由于江泽民长时间对法轮功学员写信向他反映法轮功问题没有任何回应，加上1999年4月24日发生天津警方非法抓捕40多名法轮功学员这一非常事件，1999年4月25日，上万名法轮功学员不得不到北京国务院信访局上访。</p>
-<p>然而，就在1999年4月25日晚，江泽民在写给中共政治局常委的信中却得出必须“战胜法轮功”的结论。</p>
+<p>然而，就在1999年4月25日晚，江泽民在写给中共政治局常委的信中竟然得出必须“战胜法轮功”的结论。</p>
 <p>很显然，江泽民的这个结论不是像陈云说的用90%以上的时间做调研、用不到10%的时间作决断做出的科学决策，而是江泽民在极短时间内匆匆忙忙、慌慌张张、主观武断作出的决断，这个决断必然是错误的。</p>
 <p>1999年4月27日左右，江泽民责成中央办公厅将他写给中共政治局常委的信以中办文件的形式下发传达，将江泽民个人对法轮功的错误看法强加全党。</p>
-<p>1999年6月7日，江泽民在中共政治局会议上发表长篇讲话，就如何镇压法轮功进行部署。江泽民提出成立中央解决法轮功问题领导小组，由时任中共政治局常委、国务院副总理李岚清任组长，中共政治局委员、中央政法委书记罗干，中共政治局委员、中宣部长丁关根任副组长。</p>
+<p>1999年6月7日，江泽民在中共政治局会议上发表长篇讲话，就如何镇压法轮功进行部署。江泽民提出成立中央处理法轮功问题领导小组，由时任中共政治局常委、国务院副总理李岚清任组长，中共政治局委员、中央政法委书记罗干，中共政治局委员、中宣部长丁关根任副组长。</p>
 <p>1999年6月10日，中央处理法轮功问题领导小组的办事机构——中央610办公室成立。</p>
-<p>之后，中央610办公室官员拿着江泽民“战胜法轮功”的结论，到全国各地搜集法轮功的所谓“罪证”。</p>
-<p>怎么搜集呢？很简单：凡是说法轮功好的，尽管是大量的、普遍的、感人至深的，中央610办公室官员全都视而不见、充耳不闻；凡是说法轮功不好的，尽管都是假的，中央610办公室官员都如获至宝。</p>
+<p>之后，中央610办公室官员拿着江泽民“战胜法轮功”的结论，到全国各地对法轮功展开所谓的调查研究。</p>
+<p>怎么调查研究呢？很简单：凡是说法轮功好的，尽管是大量的、普遍的、感人至深的，中央610办公室官员全都视而不见、充耳不闻；凡是说法轮功不好的，尽管都是假的，中央610办公室官员都如获至宝。</p>
 <p>1999年7月19日，中共中央根据江泽民“战胜法轮功”的结论，中央610办公室以江泽民“战胜法轮功”的结论为指导从全国各地搜集来的所谓“证据”为依据，作出取缔法轮功的决策。</p>
 <p>江泽民的结论是错的，中央610办公室收集的所谓“证据”是错的，中共中央以错误的结论、错误的证据为依据作出的取缔法轮功的决策，必然是错误的。</p>
-<p>至于中共为什么非要迫害法轮功不可的真实原因，大纪元系列社论《九评共产党》之五《江泽民泽民与中共互相利用迫害法轮功》，有比较透彻的分析，读者可以参考。</p>
+<p>至于中共为什么非要迫害法轮功不可的真实原因，大纪元系列社论《九评共产党》之五《评江泽民与中共互相利用迫害法轮功》，有比较透彻的分析，读者可以参考。</p>
+<p>注释：</p>
+<p>（1）这些问题包括：《转法轮》等法轮功的书籍被禁止出版发行；黑龙江、广东，新疆、河北、山东、福建、江苏、辽宁等地的一些基层公安机关，出现一系列侵犯法轮功学员正常学法、炼功事件；辽宁省朝阳市公安局甚至下令对法轮功“立即予以取缔”等。</p>
 <p>大纪元首发</p>
 <p>责任编辑：高义</p>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14422040.md#1">王友群：攻击法轮功注定失败 盘点中共七大败事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/27/n14423470.md#1">王友群：一场离奇车祸的惨痛教训</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426055.md#1">王友群：原中央610办公室主任李东生落马之回顾</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/8/n14432657.md#1">王友群：致中纪委国家监察委的控告信</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/29/n10006546.md#1" target="_blank">坚持共产体制推改革 波共前书记被轰下台</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/2/26/n4648466.md#1" target="_blank">在法轮大法中修炼重生的宁德人（二）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/7/5/n10538029.md#1" target="_blank">王友琴：文革中的王冷之死</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/30/n11289569.md#1" target="_blank">纽约州六位参议员祝贺法轮大法日</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/7/11/n10555144.md#1">三箭定天山 薛仁贵的不朽传奇</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/20/n14441262.md#1">专家：人死后大脑活动爆发是灵魂出窍证据</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343046.md#1">【古道人生】丈夫遭仇人陷害 妻子挺身来相救</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/4/n14429740.md#1">他们自谓不公向上天抱怨 为何遭神斥责</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/4/n14429706.md#1">名门女不弃患麻风病未婚夫 上天赐药</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/26/n14445734.md#1">【纪元焦点】习放狠话 民企被绑 马云掏3800亿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/27/n14446486.md#1">【马克时空】俄乌战争三周年 美乌达成矿产协议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/25/n14444979.md#1">【翻墙必看】习近平失势的迹象已无法掩盖</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/25/n14444976.md#1">陈希旧部曹兴信被通报卖官 习家军内斗引关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/25/n14445107.md#1">她不断在花盆里发现花生 原因你可能想不到</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/24/n14444881.md#1">《哪吒2》片段隐喻收复台湾？知名网红如是说</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/25/n14445502.md#1">王星逃出缅甸诈骗园一个月 女友陪录综艺节目</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/25/n14444921.md#1">61岁港星叶童满头白发 自曝拒染黑背后原因</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/25/n14445636.md#1">周星驰近况曝光 与大陆网红合照表情引热议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/24/n14444827.md#1">流感并发肺炎与大S一样 李珊珊自曝留医13天</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/24/n14444394.md#1">草莓容易藏污纳垢 正确清洗草莓的方法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/24/n14444270.md#1">掌握这句短语 你也能成为闲聊高手</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/24/n14444268.md#1">韩国生育率世界最低 专家：男性做太少家务</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/19/n14440386.md#1">耳折、皱纹、唇色可预示心血管疾病风险</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544980.md#1">【直播】川普签署“大而美法案”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540707.md#1">夏日沙拉这样做 清爽又健康 色彩缤纷又开胃</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/2/25/n14445435.htm">王友群：中共取缔法轮功的决策是完全错误的</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/2/25/n14445435.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
