--- a/gb/25/2/22/n14443029.md
+++ b/gb/25/2/22/n14443029.md
@@ -13,7 +13,7 @@
 <p>下午1点30分，赵宇峰跟着周世峰再次抵达法院，法官马奕欣通过查询确认法院已于2月8日签收了周世峰寄出的起诉腾讯公司的诉讼材料。马奕欣称，该案“十分重大”，但负责侵权案件的法官正在开庭，无法与周世峰见面。</p>
 <p>周世峰随后在新带去的诉讼材料上签名，并提交了一套完整文件。同时，他向法院索要了负责侵权案件法官的联系方式。</p>
 <p>整个过程中，周世峰要求随行警察为他进行了全程拍照记录。</p>
-<p>周世锋原是北京锋锐律师事务所主任，曾代理过法轮功成员、三鹿奶粉受害者等维权案件。</p>
+<p>周世锋原是北京锋锐律师事务所主任，曾代理过法轮功学员、三鹿奶粉受害者等维权案件。</p>
 <p>2015年7月9日起，中共当局大举镇压人权律师和活动人士，中国有三百多人被抓，事件被称为“709”案。周世锋和他的多位律所同事成为此次镇压事件的核心人物。2016年8月，他被以所谓的“颠覆国家政权罪”判刑7年，2022年9月24日刑满出狱。</p>
 <p>出狱后，周世锋因持续揭露“傅政华、孙力军政治团伙”仍然把持公检法系统，他的微信账号因此被腾讯公司封禁。</p>
 <p>周世锋认为，腾讯永久封锁他的微信账号是充当政治打手的又一证据，目的是报复他揭露孙力军、孟建柱政治团伙制造“709”大抓捕的恶行。这不仅违反了《微信软件许可及服务协议》，还严重侵犯了他的宪法权利和人格权，其中包括通信自由权、人格尊严权、财产权以及合同约定。</p>
@@ -21,36 +21,33 @@
 <p>目前，腾讯公司尚未对此案作出公开回应。</p>
 <p>责任编辑：高慧#</p>
 <p>此前报导：<ahref=><a href="https://github.com/1992513/djy/blob/master/gb/25/2/5/n14430370.md#1">709律师周世锋起诉腾讯封号 控微信侵犯人权</a></p>
-<p>&nbsp;</p>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/21/n14442303.md#1">中共两会前 北京等地方政府抓捕遣返软禁访民</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/18/n14440045.md#1">新年前后 三名法轮功学员遭中共迫害离世</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/18/n14439743.md#1">大陆学校强制学生订奶 教育人士揭校园腐败</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/18/n14440136.md#1">中共海外加剧迫害法轮功 国际宗教峰会关注</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544649.md#1"></a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542692.md#1">因信仰 山东85岁老人遭监视居住后被“收监”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544722.md#1">中共将藏族幼童送寄宿学校 令其脱离藏文化</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544553.md#1">遭长期稳控 丹东姜家文控诉区委书记左忠鹏</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/26/n11140380.md#1" target="_blank">【征文】刘晓：传统文化中对修炼人的敬重</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/12/n11718013.md#1" target="_blank">制裁迫害法轮功者 美国政要支持采取行动</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/10/n11102523.md#1" target="_blank">马吉卫：难以平复的伤疤</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/4/n10023623.md#1" target="_blank">车祸后30年行走困难 读《转法轮》4个月“开跑”</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/16/n14438505.md#1">无心当皇帝的庄稼汉 怎成了中兴之主？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/7/11/n10554945.md#1">上马杀敌 下马写书的猛将薛仁贵</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/11/n14434860.md#1">这些茶的雅号您知道吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/19/n14334216.md#1">【古道人生】谁杀了富家女？ 远逃二千里 躲过初一躲不过十五！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/17/n14438821.md#1">【未解之谜】皮行者牧场（三）：发现神秘高空辐射 飞碟充电站？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/21/n14442713.md#1">【佳音时刻】推俄乌停战接管加沙 川普的目标？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/21/n14442077.md#1">【直播】CPAC第二天 国安顾问和章家敦等演讲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/21/n14442645.md#1">【新闻大家谈】FBI换人 万斯发威 习又折腾军方</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/27/n14423045.md#1">价格实惠 六种Costco商品带给你“低调奢华”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/19/n14440983.md#1">川普称泽连斯基独裁者 两领导人关系紧张</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/20/n14441200.md#1">大马一地展示毛泽东石碑 被举报后撤除</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/19/n14440360.md#1">王嘉尔惊曝不再用经纪人 直言“人气是泡沫”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/20/n14441516.md#1">新真人电影《街头霸王》确定导演为樱井北尾</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/19/n14441050.md#1">39岁藏族歌手安多洛桑猝逝 好友曝死因</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/20/n14441991.md#1">胡歌被传罹癌 工作室辟谣 粉丝却为一事不满</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/20/n14441891.md#1">刘诗诗低调转让股权给吴奇隆 引发传言和猜测</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/19/n14440694.md#1">希腊长寿岛几乎无人失智 专家：2饮品是关键</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/15/n14437532.md#1">抗青光眼、白内障 中医教你每日20分钟护眼</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/18/n14440176.md#1">研究：敬畏感可促进身心健康 增强免疫力</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/14/n14437344.md#1">白开水或许并非最佳的补水方式</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/21/n14442432.md#1">70年前美国空姐应征条件曝光 逾半与外貌相关</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544980.md#1">【直播】川普签署“大而美法案”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540707.md#1">夏日沙拉这样做 清爽又健康 色彩缤纷又开胃</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/2/22/n14443029.htm">709律师周世锋被警车“押送”赴法院起诉腾讯</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/2/22/n14443029.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
